[EPMDEDP-2225] Change Service Account in k8sReconciler to edp
Change-Id: I85c1900fd17a2c89b29713ff95ccf778bd970db5

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -12,7 +12,7 @@ spec:
       labels:
         name: business-app-reconciler-controller
     spec:
-      serviceAccountName: business-app-reconciler-controller
+      serviceAccountName: edp
       containers:
         - name: business-app-reconciler-controller
           # Replace this with the built image name
