[EPMDEDP-2252] Consume user and password from secret
Change-Id: I90feb737e44fd78ec30813323bf3c55f80a4d605

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -34,8 +34,14 @@ spec:
             - name: DB_NAME
               value: "edp-install-wizard-db"
             - name: DB_USER
-              value: "admin"
+              valueFrom:
+                secretKeyRef:
+                  name: admin-console-db
+                  key: username
             - name: DB_PASS
-              value: "admin"
+              valueFrom:
+                secretKeyRef:
+                  name: admin-console-db
+                  key: password
             - name: DB_SSL_MODE
               value: "disable"
