--- a/deploy/crds/edp_v1alpha1_stage_crd.yaml
+++ b/deploy/crds/edp_v1alpha1_stage_crd.yaml
@@ -2,16 +2,16 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
-  name: cdpipelines.edp.epam.com
+  name: stages.edp.epam.com
 spec:
   group: edp.epam.com
   names:
-    kind: CDPipeline
-    listKind: CDPipelineList
-    plural: cdpipelines
-    singular: cdpipeline
+    kind: Stage
+    listKind: StageList
+    plural: stages
+    singular: stage
     shortNames:
-      - cdp
+      - stg
   scope: Namespaced
   subresources:
     status: {}
@@ -30,6 +30,6 @@ spec:
           type: object
   version: v1alpha1
   versions:
-  - name: v1alpha1
-    served: true
-    storage: true
+    - name: v1alpha1
+      served: true
+      storage: true
