--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: business-app-reconciler-controller
+  name: reconciler
 rules:
 - apiGroups:
   - ""
