--- a/deploy/crds/edp_v1alpha1_stage_cr.yaml
+++ b/deploy/crds/edp_v1alpha1_stage_cr.yaml
@@ -8,7 +8,8 @@ spec:
   description: "SIT environment for dedicated team"
   qualityGate: "manual"
   triggerType: "is-changed"
-  input: "build"
+  order: 1
+  jenkinsStep: "build"
 status:
   status: "initialized"
   lastTimeUpdated: 0001-01-01T00:00:00Z
