[EPMDEDP-2948] Handle template resource
Change-Id: I823f5e856beacc3cc0a41d411c56b8bbd4cb4f05

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,6 +25,10 @@ required = [
   branch = "master"
 
 [[override]]
+  name = "github.com/openshift/client-go"
+  version = "=v3.9.0"
+
+[[override]]
   name = "sigs.k8s.io/controller-tools"
   version = "=v0.1.8"
 
