--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: reconciler
+  name: reconciler-v2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: reconciler
+      name: reconciler-v2
   template:
     metadata:
       labels:
-        name: reconciler
+        name: reconciler-v2
     spec:
       serviceAccountName: edp
       containers:
-        - name: reconciler
+        - name: reconciler-v2
           # Replace this with the built image name
           image: REPLACE_IMAGE
           imagePullPolicy: Always
@@ -26,7 +26,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
-              value: "reconciler"
+              value: "reconciler-v2"
             - name: DB_HOST
               value: "edp-install-wizard-db"
             - name: DB_PORT
