--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -81,3 +81,7 @@ required = [
 [[constraint]]
   name = "github.com/DATA-DOG/go-sqlmock"
   version = "1.3.3"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.4.0"
