[EPMDEDP-3835] Disable registering Template controller according to env variable PLATFORM_TYPE
Change-Id: I3cec2ebdd5278e8c0c7cdd79cdc684312319e60f

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -45,3 +45,5 @@ spec:
                   key: password
             - name: DB_SSL_MODE
               value: "disable"
+            - name: PLATFORM_TYPE
+              value: "openshift"
