[EPMDEDP-4036] Configure the pod security context for all the operator deployments
Change-Id: I03f0ebec32e3d619617619e0de8bd3784851c8c5

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -13,11 +13,18 @@ spec:
         name: reconciler-v2
     spec:
       serviceAccountName: edp
+      securityContext:
+        runAsUser: 999 
+        runAsNonRoot: true
+        runAsGroup: 999
+        fsGroup: 999
       containers:
         - name: reconciler-v2
           # Replace this with the built image name
           image: REPLACE_IMAGE
           imagePullPolicy: Always
+          securityContext:
+            allowPrivilegeEscalation: false
           env:
             - name: WATCH_NAMESPACE
               value: REPLACE_VALUE
