[EPMDEDP-4272] Change reconciler operator.yaml to consume credentials for DB from db-admin-console secret
Change-Id: I16727fdb426ff9625ae0e40afc69e2cb0da2d5e3

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -43,12 +43,12 @@ spec:
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
-                  name: admin-console-db
+                  name: db-admin-console
                   key: username
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
-                  name: admin-console-db
+                  name: db-admin-console
                   key: password
             - name: DB_SSL_MODE
               value: "disable"
