[GREEN-EDP] Adjustment for CI/CD
Change-Id: Ia0d239101f9f4d77c88ea7d4872265fdac43ca43

--- a/deploy-templates/reconciler.yaml
+++ b/deploy-templates/reconciler.yaml
@@ -22,6 +22,15 @@ metadata:
     template.openshift.io/provider-display-name: EPAM
     template.openshift.io/support-url: https://www.epam.com
 objects:
+  - apiVersion: v1
+    data:
+      password: YWRtaW4=
+      username: YWRtaW4=
+    kind: Secret
+    metadata:
+      name: db-admin-console
+      namespace: ${NAMESPACE}
+    type: Opaque
   - apiVersion: authorization.openshift.io/v1
     kind: RoleBinding
     metadata:
@@ -80,6 +89,24 @@ objects:
                   value: "reconciler"
                 - name: PLATFORM_TYPE
                   value: "openshift"
+                - name: DB_HOST
+                  value: "postgres"
+                - name: DB_PORT
+                  value: "5432"
+                - name: DB_NAME
+                  value: "edp-install-wizard-db"
+                - name: DB_USER
+                  valueFrom:
+                    secretKeyRef:
+                      name: db-admin-console
+                      key: username
+                - name: DB_PASS
+                  valueFrom:
+                    secretKeyRef:
+                      name: db-admin-console
+                      key: password
+                - name: DB_SSL_MODE
+                  value: "disable"
 parameters:
   - displayName: Application image name
     name: IMAGE_NAME
