--- a/deploy/crds/edp_v1alpha1_codebase_cr.yaml
+++ b/deploy/crds/edp_v1alpha1_codebase_cr.yaml
@@ -4,9 +4,15 @@ metadata:
   name: test-npm
 spec:
   lang: "Javascript"
+  type: "application"
+  description: "My app"
   framework: "React"
+  testReportFramework: "allure"
   buildTool: "NPM"
   strategy: "create"
+  versioning:
+    type: "edp"
+    startFrom: "0.0.1"
   git:
     url: "https://git.epam.com/epmd-edp/examples/basic/edp-react-helloworld.git"
   route:
