--- a/deploy/crds/edp_v1alpha1_cdpipeline_crd.yaml
+++ b/deploy/crds/edp_v1alpha1_cdpipeline_crd.yaml
@@ -1,7 +1,6 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  creationTimestamp: null
   name: cdpipelines.v2.edp.epam.com
 spec:
   group: v2.edp.epam.com
@@ -24,15 +23,14 @@ spec:
           type: object
         spec:
           properties:
-            size:
+            name:
+              type: string
+            codebaseBranch:
               type: object
           required:
-            - size
+            - name
+            - codebaseBranch
           type: object
         status:
           type: object
   version: v1alpha1
-  versions:
-    - name: v1alpha1
-      served: true
-      storage: true
