--- a/deploy/crds/edp_v1alpha1_stage_crd.yaml
+++ b/deploy/crds/edp_v1alpha1_stage_crd.yaml
@@ -2,16 +2,16 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
-  name: cdpipelines.v2.edp.epam.com
+  name: stages.v2.edp.epam.com
 spec:
   group: v2.edp.epam.com
   names:
-    kind: CDPipeline
-    listKind: CDPipelineList
-    plural: cdpipelines
-    singular: cdpipeline
+    kind: Stage
+    listKind: StageList
+    plural: stages
+    singular: stage
     shortNames:
-      - cdp
+      - stg
   scope: Namespaced
   subresources:
     status: {}
