--- a/deploy-templates/values.yaml
+++ b/deploy-templates/values.yaml
@@ -1,14 +1,10 @@
 name: reconciler
 namespace: ""
 platform: "openshift"
-dnsWildcard: ""
 database:
-  required: false
   host: edp-install-wizard-db
   name: edp-install-wizard-db
   port: 5432
-ingress:
-  required: false
 image:
-  name: reconciler
-  version: latest
+  name: epamedp/reconciler
+  version: v2.3.0
