[EPMDEDP-4554] Add JiraServer to reconciler clusterrole
Change-Id: Icabb109e3cb3eb34d8e64f0af4f9dc82c505a9e8

--- a/deploy-templates/templates/clusterrole_kubernetes.yaml
+++ b/deploy-templates/templates/clusterrole_kubernetes.yaml
@@ -44,6 +44,9 @@ rules:
       - stages
       - stages/finalizers
       - stages/status
+      - jiraservers
+      - jiraservers/finalizers
+      - jiraservers/status
     verbs:
       - '*'
   {{ end }}
