[EPMDEDP-5372]: Add global values
Change-Id: Ib5921c8980cf0cc59e3bb4ae8cc39b31561e8257

--- a/deploy-templates/values.yaml
+++ b/deploy-templates/values.yaml
@@ -1,14 +1,12 @@
+global:
+  edpName: ""
+  platform: "openshift"
 name: reconciler
-namespace: ""
-platform: "openshift"
-dnsWildcard: ""
 database:
   required: false
   host: edp-install-wizard-db
   name: edp-install-wizard-db
   port: 5432
-ingress:
-  required: false
 image:
   name: reconciler
-  version: latest
+  version: v2.4.0
