[EPMDEDP-5603]: Add rights to reconciler sa for service resource
Change-Id: I41ad6a88c3b17c8af29f3bb5525aa7cbde894c15

--- a/deploy-templates/templates/clusterrole_kubernetes.yaml
+++ b/deploy-templates/templates/clusterrole_kubernetes.yaml
@@ -47,6 +47,7 @@ rules:
       - jiraservers
       - jiraservers/finalizers
       - jiraservers/status
+      - services
     verbs:
       - '*'
   {{ end }}
