--- a/deploy-templates/templates/clusterrole_openshift.yaml
+++ b/deploy-templates/templates/clusterrole_openshift.yaml
@@ -47,6 +47,7 @@ rules:
       - jiraservers
       - jiraservers/finalizers
       - jiraservers/status
+      - services
     verbs:
       - '*'
   {{ end }}
