--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.projectName=reconciler
 sonar.projectVersion=1.0
 sonar.go.coverage.reportPaths=coverage.out
 sonar.test.inclusions=**/*_test.go
-sonar.exclusions=**/deploy-templates/**
+sonar.exclusions=**/deploy-templates/**,**/*_controller.go
 
