[EPMDEDP-5618] Set release 2.5.0 default values
Change-Id: I21e225fda1924b75a160975e7d4ff3dcc53fba94

--- a/deploy-templates/values.yaml
+++ b/deploy-templates/values.yaml
@@ -1,5 +1,5 @@
 global:
-  edpName: ""
+  edpName: "edp"
   platform: "openshift"
   database:
     host: edp-install-wizard-db
@@ -9,4 +9,4 @@ global:
 name: reconciler
 image:
   name: reconciler
-  version: v2.4.0
+  version: v2.5.0
