[EPMDEDP-5681]: Create PerfServer controller to save record to DB
Change-Id: I6f0f585709dbd1f0938824474f673329ed2bdc4e

--- a/deploy-templates/templates/clusterrole_kubernetes.yaml
+++ b/deploy-templates/templates/clusterrole_kubernetes.yaml
@@ -48,6 +48,9 @@ rules:
       - jiraservers/finalizers
       - jiraservers/status
       - services
+      - perfservers
+      - perfservers/finalizers
+      - perfservers/status
     verbs:
       - '*'
   {{ end }}
