[EPMD-EDP]:Fix perf role
Change-Id: Idde3aa4e68f76252b56a614734ce963e2685ad54

--- a/deploy-templates/templates/clusterrole_kubernetes.yaml
+++ b/deploy-templates/templates/clusterrole_kubernetes.yaml
@@ -51,6 +51,12 @@ rules:
       - perfservers
       - perfservers/finalizers
       - perfservers/status
+      - perfdatasourcejenkinses
+      - perfdatasourcejenkinses/finalizers
+      - perfdatasourcejenkinses/status
+      - perfdatasourcesonars
+      - perfdatasourcesonars/finalizers
+      - perfdatasourcesonars/status
     verbs:
       - '*'
   {{ end }}
