--- a/deploy-templates/templates/clusterrole_openshift.yaml
+++ b/deploy-templates/templates/clusterrole_openshift.yaml
@@ -51,6 +51,12 @@ rules:
       - perfservers
       - perfservers/finalizers
       - perfservers/status
+      - perfdatasourcejenkinses
+      - perfdatasourcejenkinses/finalizers
+      - perfdatasourcejenkinses/status
+      - perfdatasourcesonars
+      - perfdatasourcesonars/finalizers
+      - perfdatasourcesonars/status
     verbs:
       - '*'
   {{ end }}
