[EPMDEDP-5291]: Rename edp-install-wizard-db in helm default value
Change-Id: I5010094a5ef1baa2c3166b2d3a694ad581c442f2

--- a/deploy-templates/values.yaml
+++ b/deploy-templates/values.yaml
@@ -2,8 +2,8 @@ global:
   edpName: ""
   platform: "openshift"
   database:
-    host: edp-install-wizard-db
-    name: edp-install-wizard-db
+    host: edp-db
+    name: edp-db
     port: 5432
 
 name: reconciler
